client updates/prod/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.org/proxy-read-timeout: '300s'
    nginx.org/proxy-send-timeout: '300s'
    nginx.org/client-max-body-size: '100m'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.org/redirect-to-https: 'false'

    # For better performance
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    # nginx.ingress.kubernetes.io/proxy-body-size: "50m"

    nginx.ingress.kubernetes.io/proxy-http-version: '1.1'

spec:
  ingressClassName: nginx
  rules:
    - host: grafana-prod.usecortex.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
